--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "./src/client/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config webpack.config.js --open",
-    "build": "webpack"
+    "test": "jest",
+    "dev": "webpack-dev-server --config webpack.dev.js --open",
+    "build": "webpack  --config webpack.prod.js",
+    "start": "nodemon ./src/server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,17 +14,32 @@
   "description": "",
   "devDependencies": {
     "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "nodemon": "^3.1.4",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "wepback": "^1.0.0"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "clean-webpack-plugin": "^4.0.0",
+    "cors": "^2.8.5",
     "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jest": "^29.7.0",
+    "mini-css-extract-plugin": "^2.9.1",
     "sass": "^1.77.8",
     "sass-loader": "^16.0.1",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.10",
+    "valid-url": "^1.0.9"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
